--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser": "^14.1.1",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@material/toolbar": "^2.3.0",
     "@types/file-saver-es": "^2.0.1",
+    "@types/jquery": "^3.5.14",
     "bootstrap": "^5.1.3",
     "devextreme": "22.1.5",
     "devextreme-angular": "22.1.5",
     "exceljs": "^4.3.0",
     "file-saver-es": "^2.0.5",
+    "jquery": "^3.6.3",
     "jspdf": "^2.5.1",
     "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^6.0.2",
@@ -35,9 +38,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.1",
+    "@angular-devkit/build-angular": "^14.2.10",
     "@angular/cli": "~14.0.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/events": "^3.0.0",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
